--- a/module.html
+++ b/module.html
@@ -1,8 +1,7 @@
-<!-- Module HTML pour HubSpot : Calculateur ROI Affichage Dynamique AKAIRO -->
 <div class="akairo-calculator-wrapper">
   <div class="calculator-header">
-    <h2>Calculez le ROI de votre écran vitrine</h2>
-    <p class="subtitle">Découvrez l'impact mesurable d'un écran d'affichage dynamique sur votre activité</p>
+    <h2>Simulez l'impact d'un écran vitrine sur votre CA</h2>
+    <p class="subtitle">Découvrez combien de chiffre d'affaires additionnel vous pourriez générer grâce à l'affichage dynamique.</p>
   </div>
 
   <div class="calculator-form">
@@ -24,25 +23,12 @@
       <span class="helper-text">Montant moyen dépensé par client</span>
     </div>
 
-    <div class="form-group">
-      <label for="investissement">Investissement initial estimé (€)</label>
-      <input type="number" id="investissement" name="investissement" placeholder="Ex: 3500" min="0" value="3500">
-      <span class="helper-text">Écran + support + installation + plateforme IDPLAY</span>
-    </div>
-
-    <div class="form-group">
-      <label for="couts_mensuels">Coûts mensuels récurrents (€)</label>
-      <input type="number" id="couts_mensuels" name="couts_mensuels" placeholder="Ex: 100" min="0" value="100">
-      <span class="helper-text">Abonnement IDPLAY + maintenance + électricité</span>
-    </div>
-
-    <button type="button" class="btn-calculate">Calculer mon ROI</button>
-
+    <button type="button" class="btn-calculate">Simuler mon potentiel</button>
   </div>
 
   <div class="calculator-results" id="results" style="display: none;">
     <div class="results-header">
-      <h3>Vos résultats</h3>
+      <h3>Projection de performance</h3>
     </div>
 
     <div class="results-grid">
@@ -93,48 +79,24 @@
       <div class="gain-label">Gain mensuel de chiffre d'affaires</div>
       <div class="gain-value" id="gain_mensuel">-</div>
       <div class="gain-percent" id="gain_percent">-</div>
+      <div class="gain-yearly-label">Soit <strong id="gain_annuel">-</strong> de CA additionnel par an</div>
     </div>
 
-    <div class="roi-section">
-      <h4>Retour sur investissement</h4>
-      <div class="roi-grid">
-        <div class="roi-card">
-          <span class="roi-label">Point mort</span>
-          <span class="roi-value" id="point_mort">-</span>
-        </div>
-        <div class="roi-card">
-          <span class="roi-label">ROI à 12 mois</span>
-          <span class="roi-value" id="roi_12">-</span>
-        </div>
-        <div class="roi-card">
-          <span class="roi-label">ROI à 24 mois</span>
-          <span class="roi-value" id="roi_24">-</span>
-        </div>
-        <div class="roi-card">
-          <span class="roi-label">ROI à 36 mois</span>
-          <span class="roi-value" id="roi_36">-</span>
+    <div class="roi-teaser-section">
+      <div class="blur-overlay">
+        <div class="fake-metrics">
+            <div class="fake-row"><span>ROI 1ère année</span><span class="fake-val">+1240%</span></div>
+            <div class="fake-row"><span>Point mort</span><span class="fake-val">2 mois</span></div>
+            <div class="fake-row"><span>Bénéfice Net</span><span class="fake-val">12 450€</span></div>
         </div>
       </div>
-
-      <div class="benefice-annuel">
-        <span class="benefice-label">Bénéfice net la 1ère année</span>
-        <span class="benefice-value" id="benefice_an1">-</span>
+      
+      <div class="teaser-content">
+        <h4>Combien ça coûte ? A quel point est-ce rentable ?</h4>
+        <p>Pour connaître votre ROI précis et le coût d'installation adapté à votre vitrine, demandez votre étude financière personnalisée.</p>
+        <a href="#formulaire-contact" class="btn-cta-roi">Obtenir mon étude de rentabilité</a>
       </div>
     </div>
 
-    <div class="benefits-section">
-      <h4>Bénéfices additionnels</h4>
-      <ul class="benefits-list">
-        <li>✓ Baisse du temps d'attente perçu</li>
-        <li>✓ Amélioration de la fidélisation client</li>
-        <li>✓ Augmentation de la récurrence d'achat</li>
-        <li>✓ Amélioration de la satisfaction client</li>
-      </ul>
-    </div>
-
-    <div class="cta-section">
-      <p class="cta-text">Obtenez une étude personnalisée avec nos experts</p>
-      <a href="#formulaire-contact" class="btn-cta">Être accompagné par AKAIRO</a>
-    </div>
   </div>
 </div>
