--- a/module.html
+++ b/module.html
@@ -8,7 +8,7 @@
     <div class="form-group">
       <label for="trafic">Trafic mensuel actuel (nombre de visiteurs/mois)</label>
       <input type="number" id="trafic" name="trafic" placeholder="Ex: 1000" min="0" value="1000">
-      <span class="helper-text">Nombre de personnes qui passent devant ou entrent dans votre point de vente</span>
+      <span class="helper-text">Nombre de personnes qui entrent dans votre point de vente</span>
     </div>
 
     <div class="form-group">
