--- a/module.html
+++ b/module.html
@@ -78,7 +78,7 @@
     <div class="gain-mensuel">
       <div class="gain-label">Gain mensuel de chiffre d'affaires</div>
       <div class="gain-value" id="gain_mensuel">-</div>
-      <div class="gain-percent" id="gain_percent">-</div>
+      <!--<div class="gain-percent" id="gain_percent">-</div>-->
       <div class="gain-yearly-label">Soit <strong id="gain_annuel">-</strong> de CA additionnel par an</div>
     </div>
 
