--- a/module.html
+++ b/module.html
@@ -56,8 +56,8 @@
         <h4>Avec écran vitrine AKAIRO</h4>
         <div class="metric">
           <span class="metric-label">Trafic mensuel</span>
-          <span class="metric-value positive" id="trafic_apres">-</span>
           <span class="metric-badge">+33%</span>
+          <span class="metric-value positive" id="trafic_apres">-</span>
         </div>
         <div class="metric">
           <span class="metric-label">Ventes mensuelles</span>
@@ -65,8 +65,8 @@
         </div>
         <div class="metric">
           <span class="metric-label">Panier moyen</span>
-          <span class="metric-value positive" id="panier_apres">-</span>
           <span class="metric-badge">+29,5%</span>
+          <span class="metric-value positive" id="panier_apres">-</span>
         </div>
         <div class="metric highlight">
           <span class="metric-label">CA mensuel</span>
@@ -79,7 +79,7 @@
       <div class="gain-label">Gain mensuel de chiffre d'affaires</div>
       <div class="gain-value" id="gain_mensuel">-</div>
       <!--<div class="gain-percent" id="gain_percent">-</div>-->
-      <div class="gain-yearly-label">Soit <strong id="gain_annuel">-</strong> de CA additionnel par an</div>
+      <div class="gain-yearly-label">Soit <strong id="gain_annuel">-</strong> de CA additionnel par an*</div>
     </div>
 
     <div class="roi-teaser-section">
