Update module.html wording

--- a/module.html
+++ b/module.html
@@ -1,7 +1,7 @@
 <div class="akairo-calculator-wrapper">
   <div class="calculator-header">
-    <h2>Simulez l'impact d'un écran vitrine sur votre CA</h2>
-    <p class="subtitle">Découvrez combien de chiffre d'affaires additionnel vous pourriez générer grâce à l'affichage dynamique.</p>
+    <h2>Simulez en 2 minutes le CA additionnel que vous pourriez générer grâce à un écran vitrine</h2>
+    <p class="subtitle">Renseignez votre trafic, vos ventes et votre panier moyen : découvrez immédiatement combien d’euros vous laissez potentiellement passer chaque mois.</p>
   </div>
 
   <div class="calculator-form">
@@ -23,7 +23,7 @@
       <span class="helper-text">Montant moyen dépensé par client</span>
     </div>
 
-    <button type="button" class="btn-calculate">Simuler mon potentiel</button>
+    <button type="button" class="btn-calculate">Simuler mon chiffre d’affaires</button>
   </div>
 
   <div class="calculator-results" id="results" style="display: none;">
