Update module.html proto 5/12

--- a/module.html
+++ b/module.html
@@ -1,7 +1,7 @@
 <div class="akairo-calculator-wrapper">
   <div class="calculator-header">
     <h2>Simulez en 2 minutes le CA additionnel que vous pourriez générer grâce à un écran vitrine</h2>
-    <p class="subtitle">Renseignez votre trafic, vos ventes et votre panier moyen : découvrez immédiatement combien d’euros vous laissez potentiellement passer chaque mois.</p>
+    <p class="subtitle">Renseignez votre trafic, vos ventes et votre panier moyen :<br><b>découvrez immédiatement combien d’euros vous laissez potentiellement passer chaque mois.</b></p>
   </div>
 
   <div class="calculator-form">
@@ -18,7 +18,7 @@
     </div>
 
     <div class="form-group">
-      <label for="panier">Panier moyen actuel (€)</label>
+      <label for="panier">Panier/ticket moyen actuel (€)</label>
       <input type="number" id="panier" name="panier" placeholder="Ex: 50" min="0" step="0.01" value="50">
       <span class="helper-text">Montant moyen dépensé par client</span>
     </div>
@@ -61,6 +61,7 @@
         </div>
         <div class="metric">
           <span class="metric-label">Ventes mensuelles</span>
+          <span class="metric-badge">+33%</span>
           <span class="metric-value positive" id="ventes_apres">-</span>
         </div>
         <div class="metric">
@@ -70,16 +71,26 @@
         </div>
         <div class="metric highlight">
           <span class="metric-label">CA mensuel</span>
+          <span class="metric-badge">+72,2%</span>
           <span class="metric-value positive" id="ca_apres">-</span>
         </div>
       </div>
     </div>
 
     <div class="gain-mensuel">
-      <div class="gain-label">Gain mensuel de chiffre d'affaires</div>
+      <div class="gain-label">Gain mensuel</div>
       <div class="gain-value" id="gain_mensuel">-</div>
       <!--<div class="gain-percent" id="gain_percent">-</div>-->
       <div class="gain-yearly-label">Soit <strong id="gain_annuel">-</strong> de CA additionnel par an*</div>
+    </div>
+    <div class="benefits-section">
+      <h4>Bénéfices additionnels</h4>
+      <ul class="benefits-list">
+        <li>✓ Baisse du temps d'attente perçu (-35%)</li>
+        <li>✓ Amélioration de la fidélisation client (+30%)</li>
+        <li>✓ Augmentation de la récurrence d'achat</li>
+        <li>✓ Amélioration de la satisfaction client (+46%)</li>
+      </ul>
     </div>
 
     <div class="roi-teaser-section">
@@ -92,8 +103,8 @@
       </div>
       
       <div class="teaser-content">
-        <h4>Combien ça coûte ? A quel point est-ce rentable ?</h4>
-        <p>Pour connaître votre ROI précis et le coût d'installation adapté à votre vitrine, demandez votre étude financière personnalisée.</p>
+        <h4>Combien ça coûte ?<br>A quel point est-ce rentable ?</h4>
+        <p>Pour connaître votre ROI précis et le coût d'installation adapté à votre vitrine, demandez votre étude personnalisée.</p>
         <a href="#formulaire-contact" class="btn-cta-roi">Obtenir mon étude de rentabilité</a>
       </div>
     </div>
