--- a/module.html
+++ b/module.html
@@ -7,19 +7,19 @@
   <div class="calculator-form">
     <div class="form-group">
       <label for="trafic">Trafic mensuel actuel (nombre de visiteurs/mois)</label>
-      <input type="number" id="trafic" name="trafic" placeholder="Ex: 1000" min="0" value="1000">
+      <input type="number" id="trafic" name="trafic" placeholder="Ex: 1000" min="0">
       <span class="helper-text">Nombre de personnes qui entrent dans votre point de vente</span>
     </div>
 
     <div class="form-group">
       <label for="ventes">Nombre de ventes mensuelles actuelles</label>
-      <input type="number" id="ventes" name="ventes" placeholder="Ex: 100" min="0" value="100">
+      <input type="number" id="ventes" name="ventes" placeholder="Ex: 100" min="0">
       <span class="helper-text">Nombre de transactions réalisées par mois</span>
     </div>
 
     <div class="form-group">
       <label for="panier">Panier/ticket moyen actuel (€)</label>
-      <input type="number" id="panier" name="panier" placeholder="Ex: 50" min="0" step="0.01" value="50">
+      <input type="number" id="panier" name="panier" placeholder="Ex: 50" min="0" step="0.01">
       <span class="helper-text">Montant moyen dépensé par client</span>
     </div>
 
